# backup-rsync

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: commands.rs  config.rs  custom_duration.rs  lib.rs  main.rs  ssh_credentials.rs  sync.rs  sync_error.rs
