[package]
name = "backup-rsync"
version = "0.1.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
mockall = { version = "0.11", optional = true }
exec-rs = { git = "https://github.com/hannes-hochreiner/exec-rs", tag = "v0.1.3" }
anyhow = "1.0"

[dev-dependencies]
mockall = "0.11"
exec-rs = { git = "https://github.com/hannes-hochreiner/exec-rs", tag = "v0.1.3", features = ["mockall"] }